# OT2AP

./: .gitignore  .gitmodules  BattleManager.hpp  CMakeLists.txt  CMakeLists.txt.bak  ChestData.json  Chest_to_ItemText.json  GameTextENMap.json  GameUtil.hpp  JsonParser.py  LICENSE  Location_to_Chest.json  ObjectData.json  README.md  StoryManager.hpp  StructsAndStuff.hpp  dllmain.cpp  xmake.lua
Jsons/: Chest_to_ItemText.json  ItemData.json  LevelsToName.json  Location_to_Chest.json  NpcDump.json  Pruned_Locations.json  Quest_to_Rewards.json  SheetDump.json  csvjson.json  levelname_to_id.json  npc_data.json  npc_to_data.json
LuaScripts/: DatabaseInfo.lua  QOL.lua  StaticObjectGetters.lua  archipelago.lua  item_manager.lua  main.lua
Octopath-2-Archipelago/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp  xmake.lua
Octopath-2-Archipelago/include/: GameData.hpp  Majesty_enums.hpp  RecieveProtos.hpp  StoryProtos.hpp  TimeManagement_enums.hpp
Octopath-2-Archipelago/src/: PlaceHolder.cpp  ReceiveCheckManager.cpp  StoryManager.cpp
Scripts/: ArchipelagoLists.lua  DatabaseInfo.lua  ItemFunction.d.lua  ItemManager.lua  KSObjectBP.d.lua  LocationManager.lua  Majesty.d.lua  Majesty.hpp  Majesty_enums.d.lua  Majesty_enums.hpp  QOL.lua  StaticObjectGetters.lua  TitlePlayerSelect.d.lua  TreasureBoxBP.d.lua  Types.d.lua  archipelago.lua  json.lua  main.lua  mods.txt.bak
UsefulCleanJsons/: ChestNamesToData.json
py/: JsonParser.py
